Instead of altering size of container when width changes - the squares themselves change + added background image

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
     <body>
 
-        <form>
-            <input type = 'text' id = 'userWidth'>
+        <form id = 'form'>
+            How many squares do you want? <input type = 'text' id = 'userWidth'>
             <input type = 'button' value = 'Submit' onclick = 'getWidth()'>
             <input type = 'button' value = 'Reset' onclick = 'resetGrid()'> 
 
